log/build_2024-09-17_14-28-38/autodrive_f1tenth/stderr.log
  File "/ros2_ws/install/autodrive_f1tenth/lib/python3.8/site-packages/autodrive_f1tenth/autodrive_bridge_1.py", line 194
    global throttle_command, steering_command
    ^
SyntaxError: name 'throttle_command' is assigned to before global declaration

